tests/errors/sem_test_07.py
# sem_tests7.py 
test = [1, 2, 3]
test += "hey"
print(test)